<resources>
    <string name="app_name">AutAmi</string>
    <string name="iniciar_sesion">INICIAR SESION</string>
    <string name="login">iniciar</string>
    <string name="reset">vaciar</string>
    <string name="username">nombre de usuario</string>
    <string name="contraseña">contraseña</string>
    <string name="fabricantes">FABRICANTES</string>
    <string name="altas">ALTAS</string>
    <string name="bajas">BAJAS</string>
    <string name="cambios">CAMBIOS</string>
    <string name="consultas">BUSCAR</string>
    <string name="ver_tabla">ver fabricantes</string>
    <string name="introduce">introduce los siguientes datos</string>
    <string name="todo">TODO</string>
    <string name="selecciona">selecciona accion a realizar</string>
    <string name="nombre">nombre</string>
    <string name="direccion">direccion</string>
    <string name="telefono">telefono</string>
    <string name="enviar">enviar</string>
    <string name="eliminar">eliminar</string>
    <string name="fabricante">id fabricante</string>
    <string name="modificar">modificar</string>
    <string name="lista_de_fabricantes">Lista de Fabricantes</string>
    <string name="busqueda_dinamica">busqueda dinamica</string>
    <string name="campo_magico">campo magico</string>
</resources>